maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: ':' expected but ',' found.
def avance(x,y) {n=getIndication(x,y)
            ^ShortestPathMaze:34: error: identifier expected but '}' found.
}
^